--- a/styles/animacion.css
+++ b/styles/animacion.css
@@ -39,7 +39,8 @@
 	height: 80px;
 	border-radius: 50%;
 	opacity: 0.3;
-	background: #426175;
+	/*background: #426175;*/
+	background: #da0037;
 	position: fixed;
 	/*margin-top: 10px;*/
 	bottom: 0;
@@ -51,61 +52,61 @@
 .burbuja:nth-child(1) {
 	width: 80px;
 	height: 80px;
-	background: #ffff;
+	background: #da0037;
 	left: 10%;
-	animation-duration: 4s;
+	animation-duration: 3s;
 	animation-delay: 3s;
 }
 
 .burbuja:nth-child(2) {
 	width: 130px;
 	height: 130px;
-	background: #86af9d;
+	background: #ffff;
 	left: 15%;
-	animation-duration: 8s;
+	animation-duration: 4s;
 	animation-delay: 5s;
 }
 
 .burbuja:nth-child(3) {
 	width: 80px;
 	height: 80px;
-	background: #ecd6c7;
+	background: #da0037;
 	left: 20%;
-	animation-duration: 8s;
+	animation-duration: 3s;
 	animation-delay: 4s;
 }
 .burbuja:nth-child(4) {
 	width: 50px;
 	height: 50px;
-	background: #e4b057;
+	background: #da0037;
 	left: 25%;
-	animation-duration: 9s;
+	animation-duration: 2s;
 	animation-delay: 3s;
 }
 
 .burbuja:nth-child(5) {
 	width: 100px;
 	height: 100px;
-	background: #46d1c0;
+	background: #da0037;
 	left: 30%;
-	animation-duration: 7s;
+	animation-duration: 4s;
 	animation-delay: 3s;
 }
 .burbuja:nth-child(6) {
 	width: 20px;
 	height: 20px;
-	background: #ecd6c7;
+	background: #fff;
 	left: 35%;
-	animation-duration: 5s;
+	animation-duration: 3s;
 	animation-delay: 2s;
 }
 
 .burbuja:nth-child(7) {
 	width: 20px;
 	height: 20px;
-	background: #ecd6c7;
+	background: #fff;
 	left: 40%;
-	animation-duration: 5s;
+	animation-duration: 2s;
 	animation-delay: 2s;
 }
 
@@ -113,33 +114,33 @@
 	width: 100px;
 	height: 100px;
 	/*background: #ecd6c7;*/
-	background: #e4b057;
+	background: #da0037;
 	left: 45%;
-	animation-duration: 6s;
+	animation-duration: 4s;
 	animation-delay: 2s;
 }
 .burbuja:nth-child(9) {
 	width: 30px;
 	height: 30px;
-	background: #ecd6c7;
+	background: #fff;
 	left: 50%;
-	animation-duration: 4s;
+	animation-duration: 3s;
 	animation-delay: 3s;
 }
 
 .burbuja:nth-child(10) {
 	width: 110px;
 	height: 110px;
-	background: #ecd6c7;
+	background: #da0037;
 	left: 55%;
-	animation-duration: 5s;
+	animation-duration: 2s;
 	animation-delay: 3s;
 }
 
 .burbuja:nth-child(11) {
 	width: 30px;
 	height: 30px;
-	background: #ecd6c7;
+	background: #fff;
 	left: 65%;
 	animation-duration: 3s;
 	animation-delay: 3s;
@@ -147,17 +148,41 @@
 .burbuja:nth-child(12) {
 	width: 70px;
 	height: 70px;
-	background: #e3b155;
+	background: #ffff;
 	left: 70%;
-	animation-duration: 8s;
+	animation-duration: 4s;
 	animation-delay: 3s;
 }
 .burbuja:nth-child(13) {
 	width: 130px;
 	height: 130px;
-	background: #86af9d;
+	background: #da0037;
 	left: 80%;
-	animation-duration: 7s;
+	animation-duration: 2s;
+	animation-delay: 3s;
+}
+.burbuja:nth-child(14) {
+	width: 30px;
+	height: 30px;
+	background: #fff;
+	left: 90%;
+	animation-duration: 3s;
+	animation-delay: 3s;
+}
+.burbuja:nth-child(15) {
+	width: 20px;
+	height: 20px;
+	background: #da0037;
+	left: 70%;
+	animation-duration: 4s;
+	animation-delay: 3s;
+}
+.burbuja:nth-child(16) {
+	width: 60px;
+	height: 60px;
+	background: #fffs;
+	left: 50%;
+	animation-duration: 2s;
 	animation-delay: 3s;
 }
 @keyframes burbujas {
