--- a/styles/proyecto.css
+++ b/styles/proyecto.css
@@ -5,7 +5,7 @@
 	margin: auto;
 	grid-gap: 20px;
 	grid-template-areas: "containerParrafo containerParrafo containerParrafo ";
-	/*background: #fefecc;*/
+	background: #444444;
 	/*border: solid 2px #fff;*/
 }
 .containerProyectos div {
@@ -18,6 +18,7 @@
 .containerProyectos img {
 	width: 100%;
 	height: 40vh;
+	background: #fff;
 	object-fit: cover;
 }
 .containerParrafo {
@@ -25,15 +26,18 @@
 	margin-top: 80px;
 }
 .containerParrafo h2 {
-	width: 100%;
-	height: 20px;
-	background: #426175;
-	color: #fff;
+	width: 400px;
+	height: 50px;
+	border: solid 3px #fff;
+	text-align: center;
+
+	color: #da0037;
 }
 .containerParrafo hr {
-	width: 100%;
+	/*width: 100%;
 	height: 10px;
 	background: #46d1c0;
+	background: #eeeeee;*/
 }
 @media screen and (max-width: 768px) {
 	.containerProyectos {
