--- a/styles/tecnologia.css
+++ b/styles/tecnologia.css
@@ -2,7 +2,7 @@
 	width: 100%;
 	display: grid;
 	height: 55rem;
-	color: #e4b057;
+	color: #ffff;
 	/*border: solid 2px #fff;*/
 	grid-template-areas:
 		"misConocimiento misConocimiento misConocimiento "
@@ -31,8 +31,8 @@
 }
 
 .containerIconos img {
-	width: 100%;
-	height: 20vh;
+	width: 70%;
+	height: 15vh;
 	object-fit: cover;
 	color: #fff;
 	/*border: solid 1px #fff;*/
@@ -51,17 +51,12 @@
 	/*border: solid 1px #fff;*/
 }
 
-.misConocimiento hr {
-	background: #46d1c0;
-	height: 6px;
-	position: relative;
-	top: -80px;
-}
-
 .misConocimiento h2 {
-	color: #fff;
-	background: #426175;
-	height: 20px;
+	color: #da0037;
+	/*background: #426175;*/
+	/*background: #feb062;*/
+	border: solid 2px #fff;
+	height: 50px;
 	margin-top: 50px;
 }
 .parrafoTecnolgia {
@@ -71,7 +66,8 @@
 	/*border: solid 1px #fff;*/
 }
 .parrafoTecnolgia h4 {
-	color: #46d1c0;
+	/*color: #46d1c0;*/
+	color: #da0037;
 	/*margin-top: -80px;*/
 }
 
