--- a/styles/inicio.css
+++ b/styles/inicio.css
@@ -48,7 +48,6 @@ a {
 	width: 100%;
 	z-index: 9999;
 	top: 0;
-	box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 .navbar ul {
 	width: 90%;
@@ -63,6 +62,7 @@ a {
 .navbar ul li a {
 	text-decoration: none;
 	color: #fff;
+
 	text-align: center;
 	font-family: "Roboto Slab", serif;
 	transition: color 0.3s ease;
@@ -72,8 +72,10 @@ a {
 	color: #da0037;
 }
 .navbar ul li a:hover {
-	/*color: #e3b155;*/
+	background: ;
 	color: #da0037;
+	height: 50vh;
+	width: 100%;
 }
 
 .contenedor_negro {
@@ -138,10 +140,8 @@ a {
 }
 .boton1:hover {
 	background: none;
-	/*color: #86af9d;*/
-	/*color: #46d1c0;*/
 	color: #da0037;
-	border: solid 2px #da0037;
+	border: solid 2px #ffff;
 	transition: all 0.8s ease;
 }
 /*SECTION DONDE VA EL INICIO*/
