--- a/styles/animacion.css
+++ b/styles/animacion.css
@@ -40,7 +40,8 @@
 	border-radius: 50%;
 	opacity: 0.3;
 	/*background: #426175;*/
-	background: #da0037;
+	/*background: #da0037;*/
+	background: #ffff;
 	position: fixed;
 	/*margin-top: 10px;*/
 	bottom: 0;
@@ -52,7 +53,8 @@
 .burbuja:nth-child(1) {
 	width: 80px;
 	height: 80px;
-	background: #da0037;
+	/*background: #da0037;*/
+	background: #ffff;
 	left: 10%;
 	animation-duration: 3s;
 	animation-delay: 3s;
@@ -70,7 +72,8 @@
 .burbuja:nth-child(3) {
 	width: 80px;
 	height: 80px;
-	background: #da0037;
+	/*background: #da0037;*/
+	background: #ffff;
 	left: 20%;
 	animation-duration: 3s;
 	animation-delay: 4s;
@@ -78,7 +81,8 @@
 .burbuja:nth-child(4) {
 	width: 50px;
 	height: 50px;
-	background: #da0037;
+	/*background: #da0037;*/
+	background: #ffff;
 	left: 25%;
 	animation-duration: 2s;
 	animation-delay: 3s;
@@ -87,7 +91,8 @@
 .burbuja:nth-child(5) {
 	width: 100px;
 	height: 100px;
-	background: #da0037;
+	/*background: #da0037;*/
+	background: #ffff;
 	left: 30%;
 	animation-duration: 4s;
 	animation-delay: 3s;
@@ -113,8 +118,8 @@
 .burbuja:nth-child(8) {
 	width: 100px;
 	height: 100px;
-	/*background: #ecd6c7;*/
-	background: #da0037;
+	background: #ffff;
+	/*background: #da0037;*/
 	left: 45%;
 	animation-duration: 4s;
 	animation-delay: 2s;
@@ -131,7 +136,8 @@
 .burbuja:nth-child(10) {
 	width: 110px;
 	height: 110px;
-	background: #da0037;
+	/*background: #da0037;*/
+	background: #ffff;
 	left: 55%;
 	animation-duration: 2s;
 	animation-delay: 3s;
@@ -156,7 +162,8 @@
 .burbuja:nth-child(13) {
 	width: 130px;
 	height: 130px;
-	background: #da0037;
+	/*background: #da0037;*/
+	background: #ffff;
 	left: 80%;
 	animation-duration: 2s;
 	animation-delay: 3s;
@@ -172,7 +179,8 @@
 .burbuja:nth-child(15) {
 	width: 20px;
 	height: 20px;
-	background: #da0037;
+	/*background: #da0037;*/
+	background: #ffff;
 	left: 70%;
 	animation-duration: 4s;
 	animation-delay: 3s;
@@ -180,9 +188,9 @@
 .burbuja:nth-child(16) {
 	width: 60px;
 	height: 60px;
-	background: #fffs;
+	background: #fff;
 	left: 50%;
-	animation-duration: 2s;
+	animation-duration: 1s;
 	animation-delay: 3s;
 }
 @keyframes burbujas {
